# kinetic-stadium

./: .dockerignore  .editorconfig  .env.example  .gcloudignore  .gitignore  ACCESSIBILITY.md  Dockerfile  GOOGLE_SERVICES.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  config_data.py  main.py
app/ai_engine/: __init__.py  chatbot.py  crowd_narrator.py  explainer.py  food_recommender.py  gemini_caller.py  prompt_builder.py  staff_advisor.py
app/api/: __init__.py  routes_analytics.py  routes_assistant.py  routes_auth.py  routes_concessions.py  routes_crowd.py  routes_fan_feed.py  routes_health.py  routes_navigation.py
app/crowd_engine/: __init__.py  cache.py  predictor.py  simulator.py  wait_times.py
app/decision_engine/: __init__.py  router.py  scorer.py
app/google_services/: __init__.py  bigquery_client.py  cloud_logging.py  firebase_auth.py  firestore_client.py  maps_client.py
app/middleware/: __init__.py  rate_limiter.py
app/models/: __init__.py  (+6 more)
frontend/: app.html  index.html
tests/: __init__.py  conftest.py  test_accessibility.py  test_ai_engine_edge.py  test_analytics.py  test_api.py  test_auth.py  test_chatbot.py  test_cloud_logging.py  test_config_validators.py  test_crowd_engine.py  test_crowd_engine_edge.py  test_decision_engine.py  test_decision_engine_edge.py  test_google_services.py  test_google_services_mocked.py  test_integration.py  test_main_edge.py  test_maps.py  test_middleware_edge.py  test_performance.py  test_security.py  test_staff_advisor.py
(+8 files in other folders)
