[project]
name = "crowdpulse-ai"
version = "1.0.0"
description = "Intelligent crowd navigation platform for large-scale sporting venues"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "CrowdPulse Team"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow-running (deselect with '-m \"not slow\"')",
    "integration: marks end-to-end integration tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "pass",
]

[tool.pylint.main]
max-line-length = 100
disable = [
    "C0114",  # missing-module-docstring  (we use file-level blocks)
    "C0115",  # missing-class-docstring   (covered by typed fields)
]
ignore-paths = ["venv", ".venv", "__pycache__"]

[tool.pylint.design]
max-args = 6
max-locals = 18
max-returns = 8

[tool.pylint.format]
max-line-length = 100

[tool.flake8]
max-line-length = 100
exclude = ["venv", ".venv", "__pycache__"]
